prod/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector-shop
  namespace: collector-shop-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: collector-shop-prod-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: collector-shop-tls
      hosts:
        - collector-app.romainnigond.fr
        - collector-api.romainnigond.fr
  rules:
    - host: collector-app.romainnigond.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collector-spa
                port:
                  number: 3000
    - host: collector-api.romainnigond.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-api
                port:
                  number: 8080
